client/src/index.css
@import url('https://fonts.cdnfonts.com/css/uncut-sans');

* {
  box-sizing: border-box;
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
hgroup,
menu,
section {
  display: block;
}

body {
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings:
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

img {
  width: 100%;
  display: inline-block;
}

button {
  background-color: transparent;
  border: none;
  cursor: pointer;

  font-size: var(--main-size);
  font-weight: var(--main-weight);
  font-family: var(--main-font);

  color: var(--main-color);
}

.button {
  padding: .75rem 1rem;
  text-align: center;
  text-decoration: none;
  display: flex;

  justify-content: center;
  align-items: center;

  border: 2px solid;
  border-radius: 40px;

  font-weight: 600;

  width: fit-content;

  transition: all .3s ease;
}

.button:hover {
  border-radius: 10px;
}

/* END RESET */



:root {
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --main-color: #FEFEFE;
  --items-color: #F7F8F4;

  --yellow: #FFB41D;
  --orange: #F96E43;
  --blue: #3D9DD8;
  --pink: #F78BD8;
  --dark-green: #189B5C;
  --light-green: #7CE55E;

  --text-color: #0F0F0F;

  --main-font: 'Uncut Sans', sans-serif;
  --main-weight: 400;
  --main-size: 1.125rem;

}

body {
  font-family: var(--main-font);
  font-weight: var(--main-weight);
  font-size: var(--main-size);
  background-color: var(--main-color);
  color: var(--text-color);

  overflow-x: hidden;
  overscroll-behavior: none;
  position: relative;
  padding-bottom: 2em;
}

h1,
h2,
h3,
h4 {
  font-family: var(--main-font);
  font-weight: 700;
}

h1 {
  font-size: 5rem;
}

h2 {
  font-size: 4rem;
}

h3 {
  font-size: 3rem;
}

h4 {
  font-size: 2rem;
}

.article {
  padding: 5em 0 0 10em;
  margin: 0 3em 0 0;

  width: 100%;
}



.page-header {
  position: relative;

  z-index: 1;

  background-color: var(--text-color);
  color: var(--main-color);

  padding: 2em;

  display: flex;
  flex-flow: column;
  align-items: flex-end;
  justify-content: flex-end;
  gap: 2em;

  min-height: 24em;
  height: fit-content;

  overflow: hidden;
}

.page-title {
  position: absolute;
  left: -3rem;
  bottom: -2rem;

  font-size: 18rem;

  line-height: .8em;
}

.page-info {
  display: flex;
  flex-flow: column;
  gap: 1em;

  align-items: flex-end;

  text-align: right;

  max-width: 30%;
  height: 100%;

  margin-right: 2em;
}

.page-buttons {
  display: flex;
  flex-flow: row;
  gap: 1em;

  z-index: 200;
}

.back-button {
  position: absolute;
  top: -1em;
  left: -1em;

  width: 4em;
  height: 4em;

  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  padding: 1em;

  background-color: var(--main-color);
  color: var(--text-color);
  border: none;
  border-radius: 20px;

  cursor: pointer;
}

.page-content {
  padding: 2em 10em;

  display: flex;
  flex-flow: column;
  gap: 2em;

  z-index: 0;
}







#theme-toggle {
  position: fixed;
  bottom: 1em;
  left: 1em;

  width: 3em;
  height: 3em;

  border-radius: 100px;

  display: flex;
  justify-content: center;
  align-items: center;
}

body.dark-theme {
  --main-color: #f8d6ed;
  --searchbar-color: #ffa4e1cc;
  --items-color: #e593cd;
  --button-color: #970065;
  --input-color: #c781b0;
  --text-color: #000000;
}






/* MEDIA QUERIES */
@media (max-width: 1240px) {
  .page-header {
    min-height: 20em;
    height: fit-content;
    justify-content: flex-start;
  }

  .page-title {
    font-size: 12rem;
    left: -1rem;
  }

  .page-info {
    width: 100%;
    max-width: 1000px;
    gap: .5em;
  }

  .page-content {
    padding: 2em;
    gap: 1em;
  }

  h1 {
    font-size: 3rem;
  }

  h2 {
    font-size: 2.5rem;
  }

  h3 {
    font-size: 2rem;
  }

  h4 {
    font-size: 1.5rem;
  }
}

@media (max-width: 768px) {
  .top-nav--logo {
    width: 200px;
  }

  .profile-icon {
    gap: .2em;
    font-size: 1rem;
    margin-right: 0;
  }

  .article {
    padding: 4em 0;
    margin: 0 3em 0 0;

    width: 100%;
    max-width: 100vw;
    overflow: hidden;
  }

  .page-header {
    min-height: 10em;
    padding: 1em 1em 4em 1em;
  }

  .page-title {
    font-size: 5rem;
    left: -.8rem;
    bottom: -.5rem;
  }

  .page-info {
    margin-right: 0;
  }

  .button {
    font-size: 1rem;
  }
}

